@@ -1,3 +1,8 @@
+2008-07-14  Richard Guenther  <rguenther@suse.de>
+
+	* tree-ssa-pre.c (insert_into_preds_of_block): Do not call
+	convert.
+
 2008-07-14  Andreas Krebbel  <krebbel1@de.ibm.com>
 
 	PR target/36745
